# rag-pipeline

./: .gitignore  pyproject.toml
data/: test.txt
notebook/: document.ipynb  pdf_loader.ipynb
